prevent results flag from breaking on mobile

--- a/css/base.scss
+++ b/css/base.scss
@@ -95,6 +95,7 @@ input{
     box-sizing: border-box;
     padding-left:5px;
     background:#373D58;
+    border-radius:4px 0 0 4px;
 }
 
 button{
@@ -102,6 +103,7 @@ button{
     cursor: pointer;
     border:0;
     background:#42D148;
+    border-radius: 0 4px 4px 0;
 }
 
 button i{
@@ -116,8 +118,9 @@ button i{
 }
 
 #results .far{
-    font-size: 6rem;
+    font-size: 5rem;
     opacity: .1;
+    top:0;
     position: absolute;
     color:#000;
     z-index: -10;
